fixed missing npm imports and accounts pagination bug

--- a/uasdm-web/src/main/ng2/src/app/admin/account/accounts.component.html
+++ b/uasdm-web/src/main/ng2/src/app/admin/account/accounts.component.html
@@ -55,7 +55,7 @@
 
                 </tbody>
             </table>
-            <pagination-controls (pageChange)="onPageChange($event)"></pagination-controls>
+            <pagination-controls (pageChange)="onPageChange($event)" maxSize="10"></pagination-controls>
         </div>
     </div>
 </div>
