--- a/uasdm-web/src/main/ng2/src/app/admin/admin-header.component.html
+++ b/uasdm-web/src/main/ng2/src/app/admin/admin-header.component.html
@@ -19,6 +19,8 @@
                 <li role="menuitem"><a class="dropdown-item" routerLink="/admin/logos" routerLinkActive="active"><i></i><localize key="Icons"></localize></a></li>
                 <li role="menuitem"><a class="dropdown-item" routerLink="/admin/email" routerLinkActive="active"><i></i><localize key="email.link"></localize></a></li>
                 <li role="menuitem"><a class="dropdown-item" routerLink="/admin/accounts" routerLinkActive="active"><i></i><localize key="accounts.link"></localize></a></li>
+                <li role="menuitem"><a class="dropdown-item" routerLink="/admin/system-info" routerLinkActive="active"><i></i>System Info</a></li>
+
 <!-- 
                 <li role="menuitem"><a class="dropdown-item" routerLink="/admin/geotree" routerLinkActive="active"><i></i><localize key="Manage_Geoentities"></localize></a></li>
                 <li role="menuitem"><a class="dropdown-item" routerLink="/admin/universaltree" routerLinkActive="active"><i></i><localize key="Manage_Universals"></localize></a></li>
