Fixed bug with loading bar modal not working Fixed issue with the inactive flag not being used

--- a/uasdm-web/src/main/ng2/src/app/uasdm-app.component.html
+++ b/uasdm-web/src/main/ng2/src/app/uasdm-app.component.html
@@ -2,6 +2,7 @@
   <!-- MAIN CONTENT AND INJECTED VIEWS -->
   <div id="main">
     <basic-loading-bar></basic-loading-bar>
+    <loading-bar></loading-bar>
     <confirm-modal></confirm-modal>
     <router-outlet></router-outlet>
   </div>
