--- a/uasdm-web/src/main/ng2/src/app/management/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/projects.component.html
@@ -88,6 +88,8 @@
                     </accordion>
                 </article>
 
+                <div id="mousemove-panel" class="mapboxgl-ctrl-bottom-right" style="background: rgba(255, 255, 255, .5); right: 265px;"></div>
+
                 <div *ngIf="active" class="cancel-layer-panel mapboxgl-ctrl mapboxgl-ctrl-group">
                     <button (click)="cancelDraw()" class="mapboxgl-ctrl-icon "><i
                             class="fa fa-times-circle"></i></button>
