--- a/uasdm-web/src/main/ng2/src/app/admin/component/admin-header/admin-header.component.html
+++ b/uasdm-web/src/main/ng2/src/app/admin/component/admin-header/admin-header.component.html
@@ -22,8 +22,10 @@
                 <li role="menuitem"><a class="dropdown-item" routerLink="/admin/accounts" routerLinkActive="active"><i></i><localize key="accounts.link"></localize></a></li>
                 <li role="menuitem"><a class="dropdown-item" routerLink="/admin/logos" routerLinkActive="active"><i></i><localize key="Icons"></localize></a></li>
                 <li role="menuitem"><a class="dropdown-item" routerLink="/admin/email" routerLinkActive="active"><i></i><localize key="email.link"></localize></a></li>
+                <li role="menuitem"><a class="dropdown-item" routerLink="/admin/sensors" routerLinkActive="active">Sensors</a></li>
+                <li role="menuitem"><a class="dropdown-item" routerLink="/admin/platforms" routerLinkActive="active">Platforms</a></li>
                 <li role="menuitem"><a class="dropdown-item" routerLink="/admin/system-info" routerLinkActive="active"><i></i>System Info</a></li>
-		            <li role="menuitem"><a class="dropdown-item" href="{{context}}/session/logout">Log out</a></li>
+		        <li role="menuitem"><a class="dropdown-item" href="{{context}}/session/logout">Log out</a></li>
               </ul>
             </li>
           </ul>
