--- a/uasdm-web/src/main/ng2/src/app/admin/component/sensor/sensor.component.html
+++ b/uasdm-web/src/main/ng2/src/app/admin/component/sensor/sensor.component.html
@@ -17,7 +17,7 @@
   <form #ngForm="ngForm">
     <div class="form-group">
       <label>Name</label>
-      <input [(ngModel)]="sensor.name" name="name" type="input" class="form-control" placeholder="Name" required />
+      <input [(ngModel)]="sensor.name" name="name" type="input" class="form-control" placeholder="Name" [disabled]="!newInstance" required  />
     </div>
     <div class="form-group">
       <label>Label</label>
