--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/entity-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/entity-modal.component.html
@@ -10,8 +10,8 @@
     </div>
   </div>
 
-  <div class="modal-title-container">
-      <h3>Add a {{entity.type}}</h3>
+  <div *ngIf="newInstance" class="modal-title-container">
+      <h3 >Add a {{entity.type}}</h3>
   </div>
 
   <form #ngForm="ngForm">
@@ -33,11 +33,27 @@
           <textarea [(ngModel)]="entity[attribute.name]" [name]="attribute.name" class="form-control" [required]="attribute.required">
           </textarea>
         </div>
+        <div *ngIf="attribute.type === 'point'">          
+          <map-attribute [(site)]="entity" ></map-attribute>
+        </div>
       </div>
     </div>
+
+    <div class="form-group" *ngIf="entity.type === 'Collection'">
+        <label>Privilege </label>
+        
+        <select style="padding:6px 10px;font-size:14px;" [(ngModel)]="entity.privilegeType" name="collection-privilege" type="input" [required]="true" 
+           [disabled]="admin === false || entity.ownerName !== userName">
+            <option value="OWNER">Owner</option>
+            <option value="AGENCY">Agency</option>
+            <option value="PUBLIC">Public</option>
+        </select>
+
+    </div>
+
     <div class="btn-holder" style="text-align: right;">
       <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">Cancel</button>
-      <button type="submit" class="btn btn-primary" (click)="handleOnSubmit()" [disabled]="!ngForm.valid">Create</button>
+      <button type="submit" class="btn btn-primary" (click)="handleOnSubmit()" [disabled]="!ngForm.valid">Apply</button>
     </div>
   </form>
 </div>
