--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/entity-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/entity-modal.component.html
@@ -39,7 +39,7 @@
       </div>
     </div>
 
-    <div class="form-group" *ngIf="entity.type === 'Collection'">
+    <div class="form-group" *ngIf="entity.type === 'Collection' && !newInstance">
         <label>Privilege </label>
         
         <select style="padding:6px 10px;font-size:14px;" [(ngModel)]="entity.privilegeType" name="collection-privilege" type="input" [required]="true" 
