Better handling of unknown urls.  Fixed issue with map not updating when a location is changed in the entity modal

--- a/uasdm-web/src/main/ng2/src/app/site/component/map-attribute/map-attribute.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/map-attribute/map-attribute.component.html
@@ -7,7 +7,7 @@
   </div>
 </div>
 <div class="row-holder">
-    <div class="label-holder">Longitude</div>
+    <div class="label-holder"><label>Longitude</label></div>
     <div class="holder">
     <div class="modal-body text-left">
       <input name="longitude" type="number" class="form-control" [(ngModel)]="coordinate.longitude" (change)="refreshCoordinateFromInput()" required />
@@ -15,7 +15,7 @@
   </div>
 </div>
 <div class="row-holder">
-    <div class="label-holder">Latitude</div>
+    <div class="label-holder"><label>Latitude</label></div>
     <div class="holder">
     <div class="modal-body text-left">
       <input name="latitude" type="number" class="form-control" [(ngModel)]="coordinate.latitude" (change)="refreshCoordinateFromInput()" required />
