--- a/uasdm-web/src/main/ng2/src/app/admin/component/account/account-invite-complete.component.html
+++ b/uasdm-web/src/main/ng2/src/app/admin/component/account/account-invite-complete.component.html
@@ -1,5 +1,5 @@
 <div>
-  <admin-header></admin-header>
+  <uasdm-header></uasdm-header>
   
   <form #form="ngForm" style="height:calc(100vh - 144px);padding-bottom: 20px;" class="modal-form" (ngSubmit)="form.valid && onSubmit()">    
     <div class="modal-dialog" style="height: 100%;">
