--- a/uasdm-web/src/main/ng2/src/app/admin/component/account/accounts.component.html
+++ b/uasdm-web/src/main/ng2/src/app/admin/component/account/accounts.component.html
@@ -1,5 +1,5 @@
 <div class="new-admin-design-main">
-    <admin-header></admin-header>
+    <uasdm-header></uasdm-header>
 
     <div id="app-container" class="container">
 
