--- a/uasdm-web/src/main/ng2/src/app/shared/component/header/header.component.html
+++ b/uasdm-web/src/main/ng2/src/app/shared/component/header/header.component.html
@@ -3,31 +3,79 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="{{context}}/project/management#/menu" title="Home"><img [src]="context + '/logo/view?id=logo'" /></a>
+        <a class="navbar-brand" href="{{context}}/project/management#/menu" title="Home">
+          <img [src]="context + '/logo/view?id=logo'" />
+        </a>
         <!-- <p class="navbar-brand" style="margin: 0;" >{{title}}</p> -->
       </div>
-          
+
       <ul class="nav navbar-nav navbar-right">
         <li dropdown>
           <a class="dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle>
-            <span class="glyphicon glyphicon-menu-hamburger"></span> 
-          </a>    
+            <span class="glyphicon glyphicon-menu-hamburger"></span>
+          </a>
 
           <ul *dropdownMenu class="dropdown-menu">
-            <li *ngIf="admin" role="menuitem"><a class="dropdown-item" routerLink="/admin/accounts">Administration</a></li>
-            <li role="menuitem"><a id="account-btn" class="user-command-link link-active" (click)="account()"><localize key="userDashboards.account"></localize></a></li>
-            <li role="menuitem"><a class="dropdown-item" routerLink="/site/tasks" routerLinkActive="active">Workflow Tasks</a></li>
-            <li role="menuitem"><a class="dropdown-item" routerLink="/site/upload" routerLinkActive="active">Collection Upload</a></li>
-            <li role="menuitem"><a class="dropdown-item" routerLink="/site/viewer" routerLinkActive="active">Site Viewer</a></li>
-            <li role="menuitem"><a class="dropdown-item" href="{{context}}/session/logout">Log out</a></li>
+            <li role="menuitem">
+              <a id="account-btn" class="user-command-link link-active" (click)="account()">
+                <localize key="userDashboards.account"></localize>
+              </a>
+            </li>
+            <li role="menuitem">
+              <a class="dropdown-item" routerLink="/site/tasks" routerLinkActive="active">Workflow Tasks</a>
+            </li>
+            <li role="menuitem">
+              <a class="dropdown-item" routerLink="/site/upload" routerLinkActive="active">Collection Upload</a>
+            </li>
+            <li role="menuitem">
+              <a class="dropdown-item" routerLink="/site/viewer" routerLinkActive="active">Site Viewer</a>
+            </li>
+            <hr *ngIf="admin">
+
+            <li *ngIf="admin" role="menuitem">
+              <a class="dropdown-item" routerLink="/admin/accounts" routerLinkActive="active">
+                <i></i>
+                <localize key="accounts.link"></localize>
+              </a>
+            </li>
+            <li *ngIf="admin" role="menuitem">
+              <a class="dropdown-item" routerLink="/admin/logos" routerLinkActive="active">
+                <i></i>
+                <localize key="Icons"></localize>
+              </a>
+            </li>
+            <li *ngIf="admin" role="menuitem">
+              <a class="dropdown-item" routerLink="/admin/email" routerLinkActive="active">
+                <i></i>
+                <localize key="email.link"></localize>
+              </a>
+            </li>
+            <li *ngIf="admin" role="menuitem">
+              <a class="dropdown-item" routerLink="/site/sensors" routerLinkActive="active">Sensors</a>
+            </li>
+            <li *ngIf="admin" role="menuitem">
+              <a class="dropdown-item" routerLink="/site/platforms" routerLinkActive="active">Platforms</a>
+            </li>
+            <li *ngIf="admin" role="menuitem">
+              <a class="dropdown-item" routerLink="/admin/system-info" routerLinkActive="active">
+                <i></i>System Info
+              </a>
+            </li>
+
+            <hr>
+            <li role="menuitem">
+              <a class="dropdown-item" href="{{context}}/session/logout">Log out</a>
+            </li>
           </ul>
         </li>
       </ul>
-      
+
       <div class="navbar-right user-indicator">
-        <p class="navbar-text">Logged in as <b style="color:white;">{{userName}}</b></p>
+        <p class="navbar-text">
+          Logged in as <b style="color: white;">{{userName}}</b>
+        </p>
       </div>
-      
+
     </div>
   </nav>
 </header>
