--- a/uasdm-web/src/main/ng2/src/app/site/component/platform/platforms.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/platform/platforms.component.html
@@ -1,7 +1,7 @@
 <div class="new-admin-design-main">
-	<admin-header></admin-header>
+	<uasdm-header></uasdm-header>
 
-	<div id="app-container" class="container-fluid">
+	<div id="app-container" class="container">
 
 		<h2>Platforms</h2>
 
@@ -15,6 +15,7 @@
 						<th></th>
 						<th class="label-column">Name</th>
 						<th class="label-column">Label</th>
+						<th class="label-column">Type</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -26,6 +27,7 @@
 					    </td>
 						<td class="label-column">{{ platform.name }}</td>
 						<td class="label-column">{{ platform.displayLabel }}</td>
+						<td class="label-column">{{ platform.platformType }}</td>
 					</tr>
 					<tr>
 						<td class="button-column">
