--- a/uasdm-web/src/main/ng2/src/app/site/component/sensor/sensors.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/sensor/sensors.component.html
@@ -1,7 +1,7 @@
 <div class="new-admin-design-main">
-	<admin-header></admin-header>
+    <uasdm-header></uasdm-header>
 
-	<div id="app-container" class="container-fluid">
+    <div id="app-container" class="container">
 
 		<h2>Sensors</h2>
 
@@ -15,6 +15,8 @@
 						<th></th>
 						<th class="label-column">Name</th>
 						<th class="label-column">Label</th>
+						<th class="label-column">Type</th>
+						<th class="label-column">Model</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -26,6 +28,8 @@
 					    </td>
 						<td class="label-column">{{ sensor.name }}</td>
 						<td class="label-column">{{ sensor.displayLabel }}</td>
+						<td class="label-column">{{ sensor.sensorType }}</td>
+						<td class="label-column">{{ sensor.model }}</td>
 					</tr>
 					<tr>
 						<td class="button-column">
