--- a/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
@@ -8,66 +8,46 @@
         <div class="col-md-3 lw-inner-col" id="location-explorer-list" style="overflow: visible;">
             <form class="submit-form">
                 <div class="row">
-                    <div class="col-md-12">
-                        <div class="location-management-widget-section">
-                            <input class="form-control" type="text" placeholder="Search..." [(ngModel)]="search"
-                                [typeaheadAsync]="true" [typeahead]="dataSource"
-                                (typeaheadOnSelect)="handleClick($event)" [typeaheadOptionsLimit]="10"
-                                [typeaheadItemTemplate]="bsItemTemplate" typeaheadOptionField="label"
-                                [ngModelOptions]="{standalone: true}"
-                                (keydown.enter)="$event.preventDefault()" />
-                        </div>
+                    <div class="col-md-8">
+                      <ul class="breadcrumb">
+                          <li>
+                            <a (click)="back()">UAS Sites</a>
+                          </li>
+                          <li *ngFor="let entity of previous; last as isLast" [ngClass]="{'active':isLast}">
+                            <a *ngIf="!isLast" (click)="back(entity)"> {{entity.name}}</a>
+                            <span *ngIf="isLast"> {{entity.name}}</span>
+                          </li>
+                      </ul>                    
                     </div>
-                </div>
-                <div *ngIf="admin" class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-4" *ngIf="admin">
                         <button (click)="handleCreate()" class="btn btn-primary create-site-btn pull-right">Create new site</button>
-<!-- 
+                        <!-- 
                         <button (click)="handleGoto()" class="btn btn-primary create-site-btn pull-right">View map image</button>
                -->
-                        
+
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="location-management-widget-section">
+                            <input class="form-control" type="text" placeholder="Search..." [(ngModel)]="search" [typeaheadAsync]="true" [typeahead]="dataSource" (typeaheadOnSelect)="handleClick($event)" [typeaheadOptionsLimit]="10" [typeaheadItemTemplate]="bsItemTemplate" typeaheadOptionField="label" [ngModelOptions]="{standalone: true}" (keydown.enter)="$event.preventDefault()" />
+                        </div>
+                    </div>
+                </div>                
             </form>
 
             <!-- <hr> -->
 
             <div class="row">
                 <div class="col-md-12">
-                    <div id="hierarchy-tree-container"
-                        class="location-management-widget-section location-management-list-container">
+                    <div id="hierarchy-tree-container" class="location-management-widget-section location-management-list-container">
                         <div *ngIf="nodes.length > 0" class="tree">
-                            <tree-root [nodes]="nodes" [options]="options" (updateData)="handleOnUpdateData()">
-                                <ng-template #treeNodeTemplate let-node let-index="index">
-                                    <span>
-                                        <i *ngIf="node.data.type === 'Site'" class="fa fa-map-marker"
-                                            style="padding-right: 2px"></i>
-                                        <i *ngIf="node.data.type === 'Project'" class="fa fa-folder"
-                                            style="padding-right: 2px"></i>
-                                        <i *ngIf="node.data.type === 'Mission'" class="fa fa-plane"
-                                            style="padding-right: 2px"></i>
+                            <div class="list-group">
+                                <a *ngFor="let node of nodes" class="list-group-item" (click)="select(node, $event)">
+                                    {{node.name}}
+                                </a>
+                            </div>
 
-                                        <i *ngIf="node.data.type === 'Collection' && (admin || node.data.ownerName === userName || node.data.privilegeType !== 'OWNER')" class="fa fa-image"
-                                            style="padding-right: 2px;"></i>
-                                        <i *ngIf="node.data.type === 'Collection' && !admin && node.data.ownerName !== userName && node.data.privilegeType === 'OWNER'" class="fa fa-image"
-                                            style="padding-right: 2px; color: #999;"></i>
-
-                                        <i *ngIf="node.data.type === 'Imagery'" class="fa fa-file"
-                                            style="padding-right: 2px"></i>
-                                        
-                                        <span *ngIf="node.data.type !== 'Collection'">
-                                            {{ node.data.name }}
-                                        </span>
-                                        <span *ngIf="node.data.type === 'Collection' && (admin || node.data.ownerName === userName || node.data.privilegeType !== 'OWNER')">
-                                            {{ node.data.name }}
-                                        </span>
-                                        <span *ngIf="node.data.type === 'Collection' && !admin && node.data.ownerName !== userName && node.data.privilegeType === 'OWNER'" style="color: #999;">
-                                            {{ node.data.name }}
-                                        </span>
-
-                                    </span>
-                                </ng-template>
-                            </tree-root>
                         </div>
                     </div>
                 </div>
@@ -77,36 +57,33 @@
             <div class="row">
 
                 <article class="base-layer-panel">
-                    <accordion>
-                        <accordion-group heading="Base Maps" style="border:none;">
-                            <div class="row-form" *ngFor="let baseLayer of baseLayers">
-                                <input class="layer-toggle-input" type='radio' name='rtoggle' [value]='baseLayer.id'
-                                    [checked]="baseLayer.selected" (change)="handleStyle(baseLayer)">
-                                <label class="layer-toggle-label">{{baseLayer.label}}</label>
-                            </div>
-                        </accordion-group>
-                    </accordion>
+                    <accordion> <accordion-group heading="Base Maps" style="border:none;">
+                    <div class="row-form" *ngFor="let baseLayer of baseLayers">
+                        <input class="layer-toggle-input" type='radio' name='rtoggle' [value]='baseLayer.id' [checked]="baseLayer.selected" (change)="handleStyle(baseLayer)">
+                        <label class="layer-toggle-label">{{baseLayer.label}}</label>
+                    </div>
+                    </accordion-group> </accordion>
                 </article>
-                
-                <div id="mousemove-panel" class="mapboxgl-ctrl-bottom-right" style="background: rgba(255, 255, 255, .5); right: 265px; padding: 0 5px 0 5px;"></div>                
+
+                <div id="mousemove-panel" class="mapboxgl-ctrl-bottom-right" style="background: rgba(255, 255, 255, .5); right: 265px; padding: 0 5px 0 5px;"></div>
 
                 <div *ngIf="active" class="cancel-layer-panel mapboxgl-ctrl mapboxgl-ctrl-group">
-                    <button (click)="cancelDraw()" class="mapboxgl-ctrl-icon "><i
-                            class="fa fa-times-circle"></i></button>
+                    <button (click)="cancelDraw()" class="mapboxgl-ctrl-icon ">
+                        <i class="fa fa-times-circle"></i>
+                    </button>
                 </div>
 
                 <div id="image-panel" *ngIf="showImagePanel && images.length > 0">
                     <div style="text-align: right;">
-                        <i class="fa fa-times btn btn-close" style="min-width:10px;padding:10px 10px;" (click)="showImagePanel = !showImagePanel"></i>
+                        <i class="fa fa-times btn btn-close" style="min-width: 10px; padding: 10px 10px;" (click)="showImagePanel = !showImagePanel"></i>
                     </div>
                     <div id="image-list-container">
 
                         <ul class="media-list">
                             <li class="media" *ngFor="let image of images" @fadeIn>
-                                <div class="media-left" *ngIf="thumbnails[image.key] != null" >
+                                <div class="media-left" *ngIf="thumbnails[image.key] != null">
                                     <a [contextMenu]="objectMenu" [contextMenuSubject]="{data:image}" (click)="previewImage($event, image)">
-                                        <img class="image-thumbnail" [src]="thumbnails[image.key] | safeHtml"
-                                            (error)="getDefaultImgURL($event)" alt="Image">
+                                        <img class="image-thumbnail" [src]="thumbnails[image.key] | safeHtml" (error)="getDefaultImgURL($event)" alt="Image">
                                     </a>
                                 </div>
                                 <div class="media-body">
@@ -124,85 +101,22 @@
     </div>
 </div>
 
-<ng-template #bsItemTemplate let-match="match" let-query="query">
-    <span *ngIf="match.item.filename == null">
-        <i class="fa fa-folder-open"></i>
+<ng-template #bsItemTemplate let-match="match" let-query="query"> <span *ngIf="match.item.filename == null">
+    <i class="fa fa-folder-open"></i>
+</span> <span *ngIf="match.item.filename != null">
+    <i class="fa fa-file"></i>
+</span> <span>
+    <span *ngFor="let site of match.item.hierarchy; index as i">
+        {{site.label}} /
+        <!-- <span *ngIf="i < (match.item.hierarchy.length -1)">/</span> -->
     </span>
-    <span *ngIf="match.item.filename != null">
-        <i class="fa fa-file"></i>
-    </span> 
+</span> <b>{{ match.item.label}}</b> </ng-template>
 
-    <span>
-        <span *ngFor="let site of match.item.hierarchy; index as i">
-            {{site.label}} /
-            <!-- <span *ngIf="i < (match.item.hierarchy.length -1)">/</span> -->
-        </span>
-    </span>
-    <b>{{ match.item.label}}</b>
-</ng-template>
+<context-menu #nodeMenu> <ng-template contextMenuItem let-item [visible]="canRunOrtho" (execute)="handleRunOrtho($event.item)"> <i class="fa fa-repeat"></i> Re-run Orthorectification Processing </ng-template> <ng-template contextMenuItem let-item [visible]="canEdit" (execute)="handleEdit($event.item)"> <i class="fa fa-edit"></i> Edit {{item?.data.name}} </ng-template> <ng-template contextMenuItem let-item [visible]="canDelete" (execute)="handleDelete($event.item)"> <i class="fa fa-trash" aria-hidden="true"></i> Delete {{item?.data.name}} </ng-template> <ng-template contextMenuItem let-item [visible]="canAddChild" (execute)="handleCreate($event.item, '')"> <i class="fa fa-arrow-circle-down"></i> Add a {{item?.data.childType?.toLowerCase()}} to
+{{item?.data.name}} </ng-template> <ng-template contextMenuItem let-item [visible]="canAddChild && canCreateImageDir" (execute)="handleCreate($event.item, 'Imagery')"> <i class="fa fa-arrow-circle-down"></i> Add an image directory to {{item?.data.name}} </ng-template> <ng-template contextMenuItem [visible]="canUpload" divider="true"></ng-template> <ng-template contextMenuItem let-item [visible]="canUpload" (execute)="handleUploadFile($event.item)"> <i style="font-size: 18px; padding: 0; width: auto; transform: none; color: #767676;" class="fa fa-cloud-upload"></i> Upload data </ng-template> <ng-template contextMenuItem [visible]="isSite" divider="true"></ng-template> <ng-template contextMenuItem let-item [visible]="canEditSite" (execute)="handleEditGeom($event.item)"> <i
+    class="fa fa-globe" aria-hidden="true"></i> Edit geometry for {{item?.data.name}} </ng-template> <ng-template contextMenuItem let-item [visible]="isSite" (execute)="zoomToFeature($event.item)"> <i class="fa fa-search-plus"></i> Zoom to feature </ng-template> </context-menu>
 
-<context-menu #nodeMenu>
-    <ng-template contextMenuItem let-item [visible]="canRunOrtho" (execute)="handleRunOrtho($event.item)"> <i
-            class="fa fa-repeat"></i>
-        Re-run Orthorectification Processing
-    </ng-template>
+<context-menu #objectMenu> <ng-template contextMenuItem let-item (execute)="handleDownload($event.item)"> <i class="fa fa-download" aria-hidden="true"></i> Download {{item?.data.name}} </ng-template> <ng-template contextMenuItem let-item (execute)="handleDelete($event.item)"> <i class="fa fa-trash" aria-hidden="true"></i> Delete {{item?.data.name}} </ng-template> <ng-template contextMenuItem let-item [visible]="hasMapImage" (execute)="handleMapImage($event.item)"> <i class="fa fa-search-plus"></i>Toggle on map </ng-template> </context-menu>
 
-    <ng-template contextMenuItem let-item [visible]="canEdit" (execute)="handleEdit($event.item)"> <i
-            class="fa fa-edit"></i> Edit
-        {{item?.data.name}}
-    </ng-template>
-    <ng-template contextMenuItem let-item [visible]="canDelete" (execute)="handleDelete($event.item)"> <i
-            class="fa fa-trash" aria-hidden="true"></i>
-        Delete {{item?.data.name}}
-    </ng-template>
-    <ng-template contextMenuItem let-item [visible]="canAddChild" (execute)="handleCreate($event.item, '')"> 
-        <i class="fa fa-arrow-circle-down"></i>
-        Add a {{item?.data.childType?.toLowerCase()}} to {{item?.data.name}}
-    </ng-template> 
-    
-    <ng-template contextMenuItem let-item [visible]="canAddChild && canCreateImageDir" (execute)="handleCreate($event.item, 'Imagery')"> <i
-            class="fa fa-arrow-circle-down"></i>
-        Add an image directory to {{item?.data.name}} 
-    </ng-template>
-
-    <ng-template contextMenuItem [visible]="canUpload" divider="true"></ng-template>
-    <ng-template contextMenuItem let-item [visible]="canUpload" (execute)="handleUploadFile($event.item)"> 
-        <i style="font-size:18px; padding:0; width:auto; transform: none; color: #767676;" class="fa fa-cloud-upload"></i>
-        Upload data
-    </ng-template>
-
-    <ng-template contextMenuItem [visible]="isSite" divider="true"></ng-template>
-    <ng-template contextMenuItem let-item [visible]="canEditSite" (execute)="handleEditGeom($event.item)"> <i
-            class="fa fa-globe" aria-hidden="true"></i>
-        Edit geometry for {{item?.data.name}}
-    </ng-template>
-    <ng-template contextMenuItem let-item [visible]="isSite" (execute)="zoomToFeature($event.item)"> <i
-            class="fa fa-search-plus"></i>
-        Zoom to feature
-    </ng-template>
-</context-menu>
-
-<context-menu #objectMenu>
-    <ng-template contextMenuItem let-item (execute)="handleDownload($event.item)">
-        <i class="fa fa-download" aria-hidden="true"></i> Download {{item?.data.name}}
-    </ng-template>
-    <ng-template contextMenuItem let-item (execute)="handleDelete($event.item)">
-        <i class="fa fa-trash" aria-hidden="true"></i> Delete {{item?.data.name}}
-    </ng-template>
-    <ng-template contextMenuItem let-item [visible]="hasMapImage" (execute)="handleMapImage($event.item)"> 
-        <i class="fa fa-search-plus"></i>Toggle on map
-    </ng-template>        
-</context-menu>
-
-<context-menu #folderMenu>
-    <ng-template contextMenuItem let-item (execute)="handleDownloadAll($event.item)">
-        <i class="fa fa-download" aria-hidden="true"></i> Download All Files
-    </ng-template>
-
-    <ng-template contextMenuItem [visible]="canUpload" divider="true"></ng-template>
-    <ng-template contextMenuItem let-item [visible]="canUpload" (execute)="handleUploadFile($event.item)"> 
-        <i style="font-size:18px; padding:0; width:auto; transform: none; color: #767676;" class="fa fa-cloud-upload"></i>
-        Upload data
-    </ng-template>
-</context-menu>
+<context-menu #folderMenu> <ng-template contextMenuItem let-item (execute)="handleDownloadAll($event.item)"> <i class="fa fa-download" aria-hidden="true"></i> Download All Files </ng-template> <ng-template contextMenuItem [visible]="canUpload" divider="true"></ng-template> <ng-template contextMenuItem let-item [visible]="canUpload" (execute)="handleUploadFile($event.item)"> <i style="font-size: 18px; padding: 0; width: auto; transform: none; color: #767676;" class="fa fa-cloud-upload"></i> Upload data </ng-template> </context-menu>
 
