--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/collection-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/collection-modal.component.html
@@ -1,5 +1,5 @@
 <div class="modal-body">
-  <div  style="height: 450px">
+  <div  style="height: 500px">
   <div *ngIf="message != null" class="error-container">
     <div class="label-holder">
       <strong>Error</strong>
@@ -28,28 +28,37 @@
       </div>
     </div>
   
-    <tabset>
-      <tab *ngFor="let folder of folders" 
-         [heading]="folder.name" 
-         (select)="onSelect(folder)">
-        <div>
-          <div id="image-list-container">
-            <ul class="media-list">
-              <li class="media" *ngFor="let image of images">
-                <div class="media-left" *ngIf="thumbnails[image.key] != null">
-                  <a (click)="previewImage($event, image)">
-                    <img class="image-thumbnail" [src]="thumbnails[image.key] | safeHtml" (error)="getDefaultImgURL($event)" alt="Image">
-                  </a>
-                </div>
-                <div class="media-body">
-                  <h4 class="media-heading">{{image.name}}</h4>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>      
-      </tab>
-    </tabset>
+    <div class="row">
+      <tabset>
+        <tab *ngFor="let folder of folders" 
+           [heading]="folder.name" 
+           (select)="onSelect(folder)">
+          <div>
+            <div id="image-list-container">
+              <ul class="media-list">
+                <li class="media" *ngFor="let image of images">
+                  <div class="media-left" *ngIf="thumbnails[image.key] != null">
+                    <a (click)="previewImage($event, image)">
+                      <img class="image-thumbnail" [src]="thumbnails[image.key] | safeHtml" (error)="getDefaultImgURL($event)" alt="Image">
+                    </a>
+                  </div>
+                  <div class="media-body">
+                    <h4 class="media-heading">{{image.name}}</h4>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>      
+        </tab>
+      </tabset>
+    </div>
+    <div class="btn-holder" style="text-align: right;">
+      <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">Close</button>
+      <button (click)="handleRunOrtho()" class="btn btn-primary pull-right">Reprocess imagery</button>    
+    </div>
+    
+    <div class="row">
+    </div>
   </div>
   </div>
 </div>
